# src/infrastructure/repositories/auth/typeorm.auth.repository.ts
@@ -5,6 +5,7 @@ import { Brackets } from 'typeorm'
 import {
   AuthRepository,
   AuthRepositoryLoginProps,
+  AuthRepositoryLoginResponse,
   AuthRepositorySignUpProps
 } from '@/domains/auth/auth.repository'
 import { User, UserStatuses } from '@/domains/user/entities/user'
@@ -26,82 +27,78 @@ import { cryptoCreateHash } from '@/shared/libs/cryptoCreateHash'
  */
 @injectable()
 export class TypeOrmAuthRepository implements AuthRepository {
-  async login(props: AuthRepositoryLoginProps): Promise<void> {
+  async login(props: AuthRepositoryLoginProps): Promise<AuthRepositoryLoginResponse> {
     const { userId, password } = props
+    let response: AuthRepositoryLoginResponse = undefined
     await appDataSource.transaction(async (em) => {
-      try {
-        const selectedUsrAuth = await em
-          .createQueryBuilder()
-          .select('hash')
-          .addSelect('salt')
-          .from(UserAuthModel, 'u_a')
-          .where({ userId })
-          .getRawOne<Pick<UserAuthModel, 'hash' | 'salt'>>()
-        if (!selectedUsrAuth) {
-          throw new Error('incorrect userId')
-        }
-        const { hash, salt } = selectedUsrAuth
-        const reCreatedHash = cryptoCreateHash(password, salt)
-        if (hash !== reCreatedHash) {
-          throw new Error('incorrect password')
-        }
-
-        await em
-          .createQueryBuilder()
-          .insert()
-          .orUpdate(['session_id', 'expired_at'], SessionModelUserIdUQKey)
-          .into(SessionModel)
-          .values({
-            userId,
-            sessionId: randomUUID(),
-            expiredAt: addHours(new Date(), 1)
-          })
-          .execute()
-      } catch (err) {
-        throw err
+      const selectedUsrAuth = await em
+        .createQueryBuilder()
+        .select('hash')
+        .addSelect('salt')
+        .from(UserAuthModel, 'u_a')
+        .where({ userId })
+        .getRawOne<Pick<UserAuthModel, 'hash' | 'salt'>>()
+      if (!selectedUsrAuth) {
+        throw new Error('incorrect userId')
       }
+      const { hash, salt } = selectedUsrAuth
+      const reCreatedHash = cryptoCreateHash(password, salt)
+      if (hash !== reCreatedHash) {
+        throw new Error('incorrect password')
+      }
+
+      const { identifiers } = await em
+        .createQueryBuilder()
+        .insert()
+        .orUpdate(['session_id', 'expired_at'], SessionModelUserIdUQKey)
+        .into(SessionModel)
+        .values({
+          userId,
+          sessionId: randomUUID(),
+          expiredAt: addHours(new Date(), 1)
+        })
+        .execute()
+      response = identifiers[0] as AuthRepositoryLoginResponse
     })
+
+    return response
   }
   async signup(props: AuthRepositorySignUpProps): Promise<User> {
     let response: User = undefined
     await appDataSource.transaction(async (em) => {
-      try {
-        const { password, userName, emailAddress, telephoneNumber } = props
-        // 重複確認
-        const existsUser = await em
-          .createQueryBuilder(UserModel, 'u')
-          .where(
-            new Brackets((qb) => {
-              qb.where({ userName: userName.value })
-                .orWhere({ emailAddress: emailAddress.value })
-                .orWhere({ telephoneNumber: telephoneNumber.value })
-            })
-          )
-          .andWhere({ userStatusName: UserStatuses.ACTIVE })
-          .getExists()
-        if (existsUser) {
-          throw new Error('already exists user')
-        }
-
-        const newUser = User.create({ userName, emailAddress, telephoneNumber })
-        const { userId } = await em.getRepository(UserModel).save(
-          UserModel.build({
-            userId: newUser.id,
-            userStatusName: UserStatuses.ACTIVE,
-            userName: newUser.userName.value,
-            emailAddress: newUser.emailAddress.value,
-            telephoneNumber: newUser.telephoneNumber.value
+      const { password, userName, emailAddress, telephoneNumber } = props
+      // 重複確認
+      const existsUser = await em
+        .createQueryBuilder(UserModel, 'u')
+        .where(
+          new Brackets((qb) => {
+            qb.where({ userName: userName.value })
+              .orWhere({ emailAddress: emailAddress.value })
+              .orWhere({ telephoneNumber: telephoneNumber.value })
           })
         )
-
-        const salt = randomUUID()
-        const hash = cryptoCreateHash(password, salt)
-        await em.getRepository(UserAuthModel).save(UserAuthModel.build({ userId, salt, hash }))
-
-        response = newUser
-      } catch (err) {
-        throw err
+        .andWhere({ userStatusName: UserStatuses.ACTIVE })
+        .getExists()
+      if (existsUser) {
+        throw new Error('already exists user')
       }
+
+      const newUser = User.create({ userName, emailAddress, telephoneNumber })
+      const { userId } = await em.getRepository(UserModel).save(
+        UserModel.build({
+          userId: newUser.id,
+          userStatusName: UserStatuses.ACTIVE,
+          userName: newUser.userName.value,
+          emailAddress: newUser.emailAddress.value,
+          telephoneNumber: newUser.telephoneNumber.value
+        })
+      )
+
+      const salt = randomUUID()
+      const hash = cryptoCreateHash(password, salt)
+      await em.getRepository(UserAuthModel).save(UserAuthModel.build({ userId, salt, hash }))
+
+      response = newUser
     })
 
     return response
