# src/presentations/api.yml
@@ -1,4 +1,6 @@
-openapi: 3.0.0
+openapi: 3.0.3
+x-stoplight:
+  id: y2xy4cvkfra69
 info:
   title: task-management
   version: 0.0.1
@@ -6,7 +8,7 @@ info:
   contact:
     name: akima1001
     email: tmp@tmp.com
-    url: 'https://github.com/Mas423'
+    url: 'https://tmp.com'
   license:
     name: MIT
     url: 'https://opensource.org/licenses/mit-license.php'
@@ -25,6 +27,17 @@ paths:
       description: description
       requestBody:
         $ref: '#/components/requestBodies/authSignupRequest'
+  /auth/login:
+    post:
+      summary: post-auth-login
+      operationId: post-auth-login
+      responses:
+        '200':
+          description: OK
+      tags:
+        - auth
+      requestBody:
+        $ref: '#/components/requestBodies/authLoginRequest'
 components:
   schemas: {}
   requestBodies:
@@ -43,7 +56,7 @@ components:
                 type: string
                 maxLength: 128
                 minLength: 1
-                example: usrename
+                example: userName
               emailAddress:
                 type: string
                 maxLength: 254
@@ -59,6 +72,22 @@ components:
               - emailAddress
               - telephoneNumber
       description: ''
+    authLoginRequest:
+      content:
+        application/json:
+          schema:
+            type: object
+            properties:
+              userName:
+                type: string
+                example: username
+                minLength: 1
+                maxLength: 128
+              password:
+                type: string
+            required:
+              - userName
+              - password
 tags:
   - name: auth
     description: auth
