# src/presentations/routes/authRoutes.ts
@@ -1,13 +1,20 @@
-import { Router, Request, Response } from 'express'
-import { AuthController } from '../controllers/auth.controller'
+import { Router, Request, Response, NextFunction } from 'express'
+import { LoginController } from '../controllers/auth/login.controller'
+import { SignupController } from '../controllers/auth/signup.controller'
 import { container } from '@/shared/libs/inversify.config'
 import { INVERSIFY_TYPES } from '@/shared/libs/inversify.types'
 
 const route = Router()
 
-// TODO: WrapFuncをどうかぶせるか
-route.post('/signup', (req: Request, res: Response) => {
-  new AuthController(container.get(INVERSIFY_TYPES.AuthRepository)).signup(req, res)
+route.post('/signup', (req: Request, res: Response, next: NextFunction) => {
+  new SignupController(container.get(INVERSIFY_TYPES.SignupUseCase))
+    .signup(req, res)
+    .catch((err) => next(err))
+})
+route.post('/login', (req: Request, res: Response, next: NextFunction) => {
+  new LoginController(container.get(INVERSIFY_TYPES.LoginUseCase))
+    .login(req, res)
+    .catch((err) => next(err))
 })
 
 export default route
