# src/useCases/shared/auth/login/login.dto.ts
@@ -1,0 +1,8 @@
+export class LoginUserCaseDTO {
+  userName: string
+  sessionId: string
+  constructor(props: LoginUserCaseDTO) {
+    this.userName = props.userName
+    this.sessionId = props.sessionId
+  }
+}
