# src/useCases/shared/auth/signUp/signup.dto.ts
@@ -1,0 +1,14 @@
+export class SignupDTO {
+  userId: string
+  userName: string
+  emailAddress: string
+  telephoneNumber: string
+  sessionId: string
+  constructor(props: SignupDTO) {
+    this.userId = props.userId
+    this.userName = props.userName
+    this.emailAddress = props.emailAddress
+    this.telephoneNumber = props.telephoneNumber
+    this.sessionId = props.sessionId
+  }
+}
